; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_ap_drv_ops.c_hostapd_set_sta_flags.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_ap_drv_ops.c_hostapd_set_sta_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostapd_data = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }
%struct.sta_info = type { i32, i64, i32 }

@WPA_STA_SHORT_PREAMBLE = common dso_local global i32 0, align 4
@WPA_STA_WMM = common dso_local global i32 0, align 4
@WPA_STA_MFP = common dso_local global i32 0, align 4
@WLAN_AUTH_FT = common dso_local global i64 0, align 8
@WLAN_STA_AUTHORIZED = common dso_local global i32 0, align 4
@WPA_STA_AUTHORIZED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hostapd_set_sta_flags(%struct.hostapd_data* %0, %struct.sta_info* %1) #0 {
  %3 = alloca %struct.hostapd_data*, align 8
  %4 = alloca %struct.sta_info*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.hostapd_data* %0, %struct.hostapd_data** %3, align 8
  store %struct.sta_info* %1, %struct.sta_info** %4, align 8
  %9 = load %struct.sta_info*, %struct.sta_info** %4, align 8
  %10 = getelementptr inbounds %struct.sta_info, %struct.sta_info* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @hostapd_sta_flags_to_drv(i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* @WPA_STA_SHORT_PREAMBLE, align 4
  %14 = load i32, i32* @WPA_STA_WMM, align 4
  %15 = or i32 %13, %14
  %16 = load i32, i32* @WPA_STA_MFP, align 4
  %17 = or i32 %15, %16
  store i32 %17, i32* %5, align 4
  %18 = load %struct.hostapd_data*, %struct.hostapd_data** %3, align 8
  %19 = getelementptr inbounds %struct.hostapd_data, %struct.hostapd_data* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %31, label %24

24:                                               ; preds = %2
  %25 = load %struct.hostapd_data*, %struct.hostapd_data** %3, align 8
  %26 = getelementptr inbounds %struct.hostapd_data, %struct.hostapd_data* %25, i32 0, i32 0
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %37

31:                                               ; preds = %24, %2
  %32 = load %struct.sta_info*, %struct.sta_info** %4, align 8
  %33 = getelementptr inbounds %struct.sta_info, %struct.sta_info* %32, i32 0, i32 1
  %34 = load i64, i64* %33, align 8
  %35 = load i64, i64* @WLAN_AUTH_FT, align 8
  %36 = icmp eq i64 %34, %35
  br i1 %36, label %37, label %48

37:                                               ; preds = %31, %24
  %38 = load %struct.sta_info*, %struct.sta_info** %4, align 8
  %39 = getelementptr inbounds %struct.sta_info, %struct.sta_info* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 8
  %41 = load i32, i32* @WLAN_STA_AUTHORIZED, align 4
  %42 = and i32 %40, %41
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %48

44:                                               ; preds = %37
  %45 = load i32, i32* @WPA_STA_AUTHORIZED, align 4
  %46 = load i32, i32* %5, align 4
  %47 = or i32 %46, %45
  store i32 %47, i32* %5, align 4
  br label %48

48:                                               ; preds = %44, %37, %31
  %49 = load i32, i32* %6, align 4
  %50 = load i32, i32* %5, align 4
  %51 = and i32 %49, %50
  store i32 %51, i32* %8, align 4
  %52 = load i32, i32* %6, align 4
  %53 = load i32, i32* %5, align 4
  %54 = xor i32 %53, -1
  %55 = or i32 %52, %54
  store i32 %55, i32* %7, align 4
  %56 = load %struct.hostapd_data*, %struct.hostapd_data** %3, align 8
  %57 = load %struct.sta_info*, %struct.sta_info** %4, align 8
  %58 = getelementptr inbounds %struct.sta_info, %struct.sta_info* %57, i32 0, i32 2
  %59 = load i32, i32* %58, align 8
  %60 = load i32, i32* %6, align 4
  %61 = load i32, i32* %8, align 4
  %62 = load i32, i32* %7, align 4
  %63 = call i32 @hostapd_sta_set_flags(%struct.hostapd_data* %56, i32 %59, i32 %60, i32 %61, i32 %62)
  ret i32 %63
}

declare dso_local i32 @hostapd_sta_flags_to_drv(i32) #1

declare dso_local i32 @hostapd_sta_set_flags(%struct.hostapd_data*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
